adding the post estimate endpoint
